samples/_failures_safe/1761306033_2b441b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a40c0aa.c: In function ‘main’:
./samples/SAFE/__tmp_7a40c0aa.c:133:16: error: missing terminating " character
  133 |         printf("Entry %
      |                ^~~~~~~~
./samples/SAFE/__tmp_7a40c0aa.c:133:9: error: expected expression at end of input
  133 |         printf("Entry %
      |         ^~~~~~
./samples/SAFE/__tmp_7a40c0aa.c:133:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7a40c0aa.c:133:9: error: expected declaration or statement at end of input
